# polychemtools

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: analysis.md  index.md  processing.md  utils.md  visualization.md
examples/: example_dsc.csv  ps_standard_1.txt  ps_standard_2.txt  ps_standard_3.txt  ps_standard_4.txt  sample_calibrations.json  sample_gc_data.TXT  sample_gpc_data.txt
polychemtools/: __init__.py
polychemtools/analysis/: __init__.py  dsc_trace.py  gpc_trace.py
polychemtools/processing/: __init__.py  data_processor.py  dsc_data_processor.py  gc_data_processor.py  gpc_data_processor.py
polychemtools/utils/: __init__.py  calibration_loader.py  log_normal.py  migrate_calibrations.py
polychemtools/visualization/: __init__.py  base_graph.py  default.mplstyle  dsc_trace_graph.py  kinetics_graph.py  trace_graph.py
tests/: __init__.py  test_calibration_loader.py  test_data_analysis.py  test_data_processing.py  test_data_visualization.py
